# StockAnalyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.rc
include/: Common.h  Config.h  LanguageLoader.h  MainWindow.h  ResultWindow.h  StockData.h
src/: Config.cpp  LanguageLoader.cpp  MainWindow.cpp  ResultWindow.cpp  StockData.cpp  main.cpp
translate/: stock.pot  stock_zh.mo  stock_zh.po  stock_zh.po.2  汉化说明.txt
